<package>
  <name>youbot_driver</name>
  <version>1.0.0</version>
  <description>Drivers for the KUKA youBot robot</description>
  <maintainer email="jan.paulus@h-brs.de">Jan Paulus</maintainer>

  <license>gnu-lgpl-v2.1 modified-bsd</license>

  <url type="website">https://github.com/youbot/youbot_driver</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="jan.paulus@h-brs.de">Jan Paulus</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->

<export>
    <cpp lflags="-L${prefix}/lib/ -lYouBotDriver -lsoem" cflags="-I${prefix}/ -I${prefix}/soem/src"/>
</export>

</package>